--- a/NLP Project/NLP_Project.ipynb
+++ b/NLP Project/NLP_Project.ipynb
@@ -5,7 +5,7 @@
    "id": "ea7f2c3e-72ec-4f6f-95fa-7e553e1078fb",
    "metadata": {},
    "source": [
-    "# NLP Project\n",
+    "# **NLP Project**\n",
     "\n",
     "In this project, it will be used the deep learning model from the paper [Neural Networks for Joint Sentence Classification in Medical Paper Abstracts](https://arxiv.org/pdf/1612.05251.pdf), by replicating the paper [PubMed 200k RCT: a Dataset for Sequential Sentence Classification in Medical Abstracts](https://arxiv.org/abs/1710.06071). */Cheers for the authors. Outstanding job!/*\n",
     "\n",
@@ -56,20 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7619695e-3bf4-431f-87cd-828d13a1b4a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPU 0: NVIDIA GeForce GTX 1650 (UUID: GPU-a1ecbd48-e2fe-af7b-8b2c-0ecd74bd5687)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!nvidia-smi -L"
+    "# !nvidia-smi -L"
    ]
   },
   {
